<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Equipe">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:onClick="clickVoltar"
        android:text="@string/strVoltar"
        android:textColor="@color/marromEscuro"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strTopoImg"
                android:onClick="clickLogo"
                app:srcCompat="@drawable/topodoappb" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strContato"
                android:textAlignment="center"
                android:textColor="@color/amarelo"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="37dp"
                android:layout_height="21dp"
                android:contentDescription="@string/numWhats"
                android:paddingLeft="10dp"
                app:srcCompat="@drawable/iconwpp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numWhats"
                android:textAlignment="center"
                android:textColor="@color/amarelo" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="37dp"
                android:layout_height="23dp"
                android:contentDescription="@string/numWhats"
                android:paddingLeft="10dp"
                app:srcCompat="@drawable/icontell" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strNumTell"
                android:textAlignment="center"
                android:textColor="@color/amarelo" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>